--- a/Diagnosis.Client.App/Controls/CardParts/HealthRecordEditor.xaml
+++ b/Diagnosis.Client.App/Controls/CardParts/HealthRecordEditor.xaml
@@ -143,14 +143,14 @@
                 <Button Command="{Binding Autocomplete.AddIcdCommand}"
                         ToolTip="Добавить МКБ (Ctrl+3)">
                     <DockPanel>
-                        <TextBlock Text="МКБ" />
+                        <TextBlock Text="МКБ"
+                                   FontWeight="Bold" />
                     </DockPanel>
                 </Button>
                 <Button Command="{Binding Autocomplete.AddMeasureCommand}"
                         ToolTip="Добавить измерение (Ctrl+4)">
-                    <DockPanel>
-                        <TextBlock Text="Измерение" />
-                    </DockPanel>
+                    <diag:MenuItemIcon Source="{StaticResource appbar_measure_celcius}"
+                                       Style="{StaticResource MetroMenuItemIcon}" />
                 </Button>
             </ToolBar>
 
@@ -161,14 +161,8 @@
                     HorizontalAlignment="Right"
                     ToolTip="Закрыть редактор, сохранив все изменения (Ctrl+S)"
                     Style="{StaticResource metroCircleButton}">
-                <Rectangle Width="12"
-                           Height="12"
-                           Fill="{Binding Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Button}}}">
-                    <Rectangle.OpacityMask>
-                        <VisualBrush Stretch="Uniform"
-                                     Visual="{DynamicResource appbar_close}" />
-                    </Rectangle.OpacityMask>
-                </Rectangle>
+                <diag:MenuItemIcon Style="{StaticResource MetroButtonIcon}"
+                                   Source="{StaticResource appbar_close}" />
             </Button>
             <Button DockPanel.Dock="Right"
                     Style="{StaticResource HelpButton}"
