--- a/Diagnosis.Common.Presentation/Styles/AfterThemeStyles.xaml
+++ b/Diagnosis.Common.Presentation/Styles/AfterThemeStyles.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:mahControls="http://metro.mahapps.com/winfx/xaml/controls"
+                    xmlns:controls="clr-namespace:Diagnosis.Common.Presentation.Controls"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!--This styles overwrites theme styles-->
 
@@ -10,7 +11,7 @@
         <Setter Property="FirstDayOfWeek"
                 Value="Monday" />
     </Style>
-
+    
     <!--textblock-->
     <Style TargetType="{x:Type TextBlock}"
            BasedOn="{StaticResource {x:Type TextBlock}}">
@@ -93,7 +94,7 @@
 
         <!--<EventSetter Event="Selected"
                      Handler="item_selected" />-->
-        
+
         <!-- Hier Vm -->
 
         <Setter Property="IsSelected"
@@ -101,7 +102,7 @@
         <Setter Property="IsExpanded"
                 Value="{Binding IsExpanded, Mode=TwoWay}" />
     </Style>
-    
+
     <!--  buttons  -->
     <Style x:Key="DialogButtonsPanel"
            TargetType="{x:Type StackPanel}">
@@ -142,6 +143,24 @@
                 Value="1" />
     </Style>
 
+    <Style  x:Key="MetroButtonIcon"
+            TargetType="controls:MenuItemIcon">
+        <Setter Property="Width"
+                Value="12" />
+        <Setter Property="Height"
+                Value="12" />
+        <Setter Property="Fill"
+                Value="{Binding Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Button}}}" />
+    </Style>
+    <Style  x:Key="MetroMenuItemIcon"
+            TargetType="controls:MenuItemIcon">
+        <Setter Property="Width"
+                Value="16" />
+        <Setter Property="Height"
+                Value="16" />
+        <Setter Property="Fill"
+                Value="{Binding Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type MenuItem}}}" />
+    </Style>
     <Style x:Key="HelpButton"
            x:Shared="False"
            BasedOn="{StaticResource metroCircleButton}"
@@ -160,14 +179,8 @@
                 Value="{x:Static ApplicationCommands.Help}" />
         <Setter Property="Content">
             <Setter.Value>
-                <Rectangle Width="12"
-                           Height="12"
-                           Fill="{Binding Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Button}}}">
-                    <Rectangle.OpacityMask>
-                        <VisualBrush Stretch="Uniform"
-                                     Visual="{DynamicResource appbar_question}" />
-                    </Rectangle.OpacityMask>
-                </Rectangle>
+                <controls:MenuItemIcon Style="{StaticResource MetroButtonIcon}"
+                                       Source="{StaticResource appbar_question}" />
             </Setter.Value>
         </Setter>
     </Style>
@@ -344,7 +357,7 @@
     </Style>
 
     <!-- panel -->
-    
+
     <Style TargetType="StackPanel"
            x:Key="hidingListBoxItemPanel">
         <Setter Property="Visibility"
@@ -369,6 +382,4 @@
             </DataTrigger>
         </Style.Triggers>
     </Style>
-
-  
 </ResourceDictionary>
