hreditor. Fix AddQueryToSuggestions button state

--- a/Diagnosis.Client.App/Controls/CardParts/HealthRecordEditor.xaml
+++ b/Diagnosis.Client.App/Controls/CardParts/HealthRecordEditor.xaml
@@ -133,7 +133,7 @@
                     </DockPanel>
                 </Button>
                 <Separator />
-                <ToggleButton IsChecked="{Binding AddQueryToSuggestions}"
+                <ToggleButton IsChecked="{Binding Autocomplete.AddQueryToSuggestions}"
                               ToolTip="Переключить режим завершения слов (Ctrl+Alt+ПРОБЕЛ)">
                     <DockPanel>
                         <diag:AutoGreyableImage Source="{StaticResource completionModeImage}" />
