--- a/Diagnosis.Client.App/Controls/CardParts/DateOffsetEditor.xaml
+++ b/Diagnosis.Client.App/Controls/CardParts/DateOffsetEditor.xaml
@@ -248,10 +248,11 @@
                         <Label Content="Возраст" />
                         <TextBlock HorizontalAlignment="Right"
                                    VerticalAlignment="Center"
-                                   FontSize="{StaticResource LabelFontSize}"
-                                   Margin="0 0 3 10">
+                                   FontSize="{StaticResource LabelFontSize}"                                   
+                                   Margin="0 0 3 0">
                             <TextBlock.Style>
-                                <Style TargetType="TextBlock">
+                                <Style TargetType="TextBlock"
+                                       BasedOn="{StaticResource {x:Type TextBlock}}">
                                     <Setter Property="Text"
                                             Value="c" />
                                     <Style.Triggers>
@@ -264,7 +265,7 @@
                                 </Style>
                             </TextBlock.Style>
                         </TextBlock>
-                        <DockPanel Grid.Column="1">
+                        <StackPanel Orientation="Horizontal" Grid.Column="1">
                             <TextBox Text="{Binding EventDate.AtAge, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, TargetNullValue=''}"
                                      Width="50"
                                      HorizontalContentAlignment="Right">
@@ -274,14 +275,14 @@
                                        Margin="3,0,0,0"
                                        FontSize="{StaticResource LabelFontSize}"
                                        VerticalAlignment="Center"></TextBlock>
-                        </DockPanel>
+                        </StackPanel>
                         <TextBlock Text="до"
-                                   Margin="0 0 3 10"
+                                   Margin="0 0 3 0"
                                    FontSize="{StaticResource LabelFontSize}"
                                    VerticalAlignment="Center"
                                    Visibility="{Binding IsIntervalEditorOpened,Converter={StaticResource BooleanToVisibilityConverter}}"
                                    Grid.Column="2" />
-                        <DockPanel Grid.Column="3"
+                        <StackPanel Orientation="Horizontal" Grid.Column="3"
                                    Visibility="{Binding IsIntervalEditorOpened,Converter={StaticResource BooleanToVisibilityConverter}}">
                             <TextBox Text="{Binding EventDate.ToAtAge, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, TargetNullValue=''}"
                                      Width="50"
@@ -292,7 +293,7 @@
                                        Margin="3,0,0,0"
                                        FontSize="{StaticResource LabelFontSize}"
                                        VerticalAlignment="Center" />
-                        </DockPanel>
+                        </StackPanel>
                     </Grid>
                 </StackPanel>
             </Grid>
