--- a/Diagnosis.Server.App/Screens/Uoms.xaml
+++ b/Diagnosis.Server.App/Screens/Uoms.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:diag="http://schemas.smg.com/diagnosis"
              mc:Ignorable="d"
+             x:Name="uoms"
              Padding="{StaticResource SreenPadding}"
              Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
              d:DataContext="{d:DesignInstance diag:UomsListViewModel, IsDesignTimeCreatable=True}"
@@ -39,7 +40,10 @@
             </Button>
         </ToolBar>
 
-        <diag:Filter DataContext="{Binding Filter}"
+        <diag:Filter x:Name="filter"
+                     DataContext="{Binding Filter}"
+                     Visibility="{Binding DataContext.NoUoms, ElementName=uoms, Converter={StaticResource NegBooleanToVisibilityConverter}}"
+                     WatermarkText="описание или обозначение"
                      Grid.Row="1" />
 
         <!--  Set VirtualizationMode for IsSelected binding  -->
