--- a/Diagnosis.Client.App/Styles/AvalonDock.xaml
+++ b/Diagnosis.Client.App/Styles/AvalonDock.xaml
@@ -1,6 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:xcad="http://schemas.xceed.com/wpf/xaml/avalondock"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
+    <xcad:AnchorSideToOrientationConverter x:Key="AnchorSideToOrientationConverter" />
+
     <Style x:Key="AnchorablePaneTitleNoButtons"
            TargetType="xcad:AnchorablePaneTitle">
         <Setter Property="Template">
@@ -13,12 +16,16 @@
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
-                            <xcad:DropDownControlArea
-                                    DropDownContextMenu="{Binding Model.Root.Manager.AnchorableContextMenu, RelativeSource={RelativeSource TemplatedParent}}"
-                                                      DropDownContextMenuDataContext="{Binding Path=LayoutItem, RelativeSource={RelativeSource TemplatedParent}}">
-                                <ContentPresenter Content="{Binding Model, RelativeSource={RelativeSource TemplatedParent}}"
-                                                  ContentTemplate="{Binding Model.Root.Manager.AnchorableTitleTemplate, RelativeSource={RelativeSource TemplatedParent}}"
-                                                  ContentTemplateSelector="{Binding Model.Root.Manager.AnchorableTitleTemplateSelector, RelativeSource={RelativeSource TemplatedParent}}" />
+                            <xcad:DropDownControlArea DropDownContextMenu="{Binding Model.Root.Manager.AnchorableContextMenu,
+                                                                                                  RelativeSource={RelativeSource TemplatedParent}}"
+                                                                    DropDownContextMenuDataContext="{Binding Path=LayoutItem,
+                                                                                                             RelativeSource={RelativeSource TemplatedParent}}">
+                                <ContentPresenter Content="{Binding Model,
+                                                                    RelativeSource={RelativeSource TemplatedParent}}"
+                                                  ContentTemplate="{Binding Model.Root.Manager.AnchorableTitleTemplate,
+                                                                            RelativeSource={RelativeSource TemplatedParent}}"
+                                                  ContentTemplateSelector="{Binding Model.Root.Manager.AnchorableTitleTemplateSelector,
+                                                                                    RelativeSource={RelativeSource TemplatedParent}}" />
                             </xcad:DropDownControlArea>
                         </Grid>
                     </Border>
@@ -27,7 +34,7 @@
         </Setter>
     </Style>
 
-    <Style x:Key="AnchorablePaneTitleEmpty"
+    <Style x:Key="AnchorablePaneTitleEmptyForScreen"
            TargetType="xcad:AnchorablePaneTitle"
            BasedOn="{StaticResource {x:Type xcad:AnchorablePaneTitle}}">
         <Style.Triggers>
@@ -36,10 +43,11 @@
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate>
-                            <!--<Border Background="{TemplateBinding Background}"
+                            <Border Background="{TemplateBinding Background}"
                                     BorderBrush="{TemplateBinding BorderBrush}"
-                                    BorderThickness="{TemplateBinding BorderThickness}">                               
-                            </Border>-->
+                                    BorderThickness="{TemplateBinding BorderThickness}">
+                                <!--nothing here-->
+                            </Border>
                         </ControlTemplate>
                     </Setter.Value>
                 </Setter>
@@ -61,4 +69,108 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <Style x:Key="DocumentPaneControlWithoutTabsStyle"
+           TargetType="{x:Type xcad:LayoutDocumentPaneControl}">
+        <Setter Property="BorderThickness"
+                Value="0" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type xcad:LayoutDocumentPaneControl}">
+                    <Grid ClipToBounds="true"
+                          SnapsToDevicePixels="true"
+                          KeyboardNavigation.TabNavigation="Local">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <!--  Following border is required to catch mouse events  -->
+                        <Border Background="Transparent"
+                                Grid.RowSpan="2" />
+                        <Grid Panel.ZIndex="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <xcad:DocumentPaneTabPanel x:Name="HeaderPanel"
+                                                                     Grid.Column="0"
+                                                                     IsItemsHost="true"
+                                                                     Margin="2,2,2,0"
+                                                                     Grid.Row="0"
+                                                                     Height="0"
+                                                                     KeyboardNavigation.TabIndex="1" />                          
+                        </Grid>
+                        <Border x:Name="ContentPanel"
+                                VerticalAlignment="Stretch"
+                                HorizontalAlignment="Stretch"
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="{TemplateBinding BorderThickness}"
+                                Background="{TemplateBinding Background}"
+                                Grid.Column="0"
+                                KeyboardNavigation.DirectionalNavigation="Contained"
+                                Grid.Row="1"
+                                KeyboardNavigation.TabIndex="2"
+                                KeyboardNavigation.TabNavigation="Cycle">
+                            <ContentPresenter x:Name="PART_SelectedContentHost"
+                                              ContentSource="SelectedContent"
+                                              Margin="{TemplateBinding Padding}"
+                                              SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                        </Border>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsEnabled"
+                                 Value="false">
+                            <Setter Property="Foreground"
+                                    Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="ItemContainerStyle">
+            <Setter.Value>
+                <Style TargetType="{x:Type TabItem}">
+                    <Setter Property="Visibility"
+                            Value="{Binding IsVisible, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                    <Setter Property="IsSelected"
+                            Value="{Binding IsSelected, Mode=TwoWay}" />
+                    <Setter Property="ToolTip"
+                            Value="{Binding ToolTip}" />
+                </Style>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="ItemTemplate">
+            <Setter.Value>
+                <DataTemplate>
+                    <xcad:LayoutDocumentTabItem Model="{Binding}" />
+                </DataTemplate>
+            </Setter.Value>
+        </Setter>
+
+        <Setter Property="ContentTemplate">
+            <Setter.Value>
+                <DataTemplate>
+                    <xcad:LayoutDocumentControl Model="{Binding}" />
+                </DataTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
+    <!--no "margins" to window border-->
+    
+    <ControlTemplate x:Key="ZeroSizeAnchorSideTemplate"
+                     TargetType="{x:Type xcad:LayoutAnchorSideControl}">
+        <ItemsControl ItemsSource="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Children}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel MinWidth="0"
+                                MinHeight="0"
+                                Orientation="{Binding Path=Model.Side,
+                                                      RelativeSource={RelativeSource AncestorType={x:Type xcad:LayoutAnchorSideControl},
+                                                                                     Mode=FindAncestor},
+                                                      Converter={StaticResource AnchorSideToOrientationConverter}}" />
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+        </ItemsControl>
+    </ControlTemplate>
 </ResourceDictionary>
