--- a/Diagnosis.Common.Presentation/Controls/Common/MenuItemIcon.xaml
+++ b/Diagnosis.Common.Presentation/Controls/Common/MenuItemIcon.xaml
@@ -9,24 +9,22 @@
              MinWidth="12"
              MinHeight="12">
     <Rectangle>
+        <Rectangle.Resources>
+            <VisualBrush x:Key="menuItemIconBrush"
+                         Stretch="Uniform"
+                         Visual="{Binding ElementName=menuItemIcon, Path=Source}" />
+        </Rectangle.Resources>
         <Rectangle.Style>
             <Style TargetType="Rectangle">
                 <Setter Property="Fill"
                         Value="{Binding Fill, ElementName=menuItemIcon}" />
-                <Setter Property="OpacityMask">
-                    <Setter.Value>
-                        <VisualBrush Stretch="Uniform"
-                                     Visual="{Binding ElementName=menuItemIcon, Path=Source}" />
-                    </Setter.Value>
-                </Setter>
+                <Setter Property="OpacityMask"
+                        Value="{StaticResource menuItemIconBrush}" />
                 <Style.Triggers>
                     <DataTrigger Binding="{Binding Fill, ElementName=menuItemIcon}"
                                  Value="{x:Null}">
-                        <Setter Property="Fill">
-                            <Setter.Value>
-                                <VisualBrush Visual="{Binding ElementName=menuItemIcon, Path=Source}" />
-                            </Setter.Value>
-                        </Setter>
+                        <Setter Property="Fill"
+                                Value="{StaticResource menuItemIconBrush}" />
                         <Setter Property="OpacityMask"
                                 Value="Black" />
                     </DataTrigger>
